fix: prevents a possible scrollbar related layout shift during zoom in/out

--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -1,7 +1,3 @@
-body {
-  overflow-y: scroll; 
-}
-
 .hero-html {
   --size: 12rem;
 
